[gd_scene load_steps=3 format=3 uid="uid://d2ruirci6oic6"]

[ext_resource type="Theme" uid="uid://clefja284aktg" path="res://code/ui/menu/default_theme.tres" id="1_1v6wo"]
[ext_resource type="Script" path="res://code/ui/menu/main_menu.gd" id="1_tiedm"]

[node name="MainMenu" type="PanelContainer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -106.0
offset_right = 100.0
offset_bottom = 106.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_1v6wo")
script = ExtResource("1_tiedm")

[node name="Margin" type="MarginContainer" parent="."]
layout_mode = 2

[node name="VBox" type="VBoxContainer" parent="Margin"]
layout_mode = 2

[node name="Play" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Play"

[node name="Settings" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Settings"

[node name="Credits" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Credits"

[node name="Exit" type="Button" parent="Margin/VBox"]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
text = "Exit"

[connection signal="pressed" from="Margin/VBox/Play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="Margin/VBox/Settings" to="." method="_on_settings_pressed"]
[connection signal="pressed" from="Margin/VBox/Credits" to="." method="_on_credits_pressed"]
[connection signal="pressed" from="Margin/VBox/Exit" to="." method="_on_exit_pressed"]
